--- a/reservaciones.html
+++ b/reservaciones.html
@@ -101,7 +101,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Restaurante Mitori. Todos los derechos reservados..</p>
+        <p>&copy; 2025 Restaurante Mitori. Todos los derechos reservados.</p>
     </footer>
 
     <script src="js/script.js"></script>
