--- a/reservaciones.html
+++ b/reservaciones.html
@@ -71,7 +71,7 @@
                 
                 <div class="form-group">
                     <label for="time">Hora:</label>
-                    <input type="time" id="time" name="Tiempo" required>
+                    <input type="time" id="time" name="Hora" required>
                 </div>
                 
                 <div class="form-group">
