--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </a>
 
             <!-- Correo Email -->
-            <a href="mailto:luisjousesuastegui@gmail.com" target="_blank"  title="Enviar correo electrónico">
+            <a href="mailto:Mitorijapones@gmail.com" target="_blank"  title="Enviar correo electrónico">
                 <i class="fa-solid fa-envelope"></i>
             </a>
 
