--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="img/portada.png" as="image">
-    <link rel="preload" href="img/LogoMitori.png" as="image" media="(max-width: 768px)">
+    <link rel="preload" href="img/portada.jpg" as="image">
+    <link rel="preload" href="img/LogoMitori.jpg" as="image" media="(max-width: 768px)">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
             
 
              <div class="hero-content">
-            <h2>Benvinguts a l'experiència Japonesa culinaria</h2>
+            <h2>Experiència Japonesa culinaria</h2>
             <p>Sabors auténtics, ingredients frescos</p>
             <a href="reservaciones.html" class="btn">Reserva Ara</a>
             </div>
