--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             
 
              <div class="hero-content">
-            <h2>Experiència Japonesa culinaria</h2>
+            <h2>Experiència Japonesa Culinaria</h2>
             <p>Sabors auténtics, ingredients frescos</p>
             <a href="reservaciones.html" class="btn">Reserva Ara</a>
             </div>
