--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="experience-image">
                         <img src="img/lobby.jpg" alt="Ambient en Mitori" class="ampliar-imagen">
                     </div>
-                    <h2>Ambiente</h2>
+                    <h2>Ambient</h2>
                     <p>Descobreix un ambient únic i encantador al nostre restaurant. <br>
                     Cada racó us espera amb una experiència gastronòmica inoblidable. <br>
                     Vine i deixa't sorprendre!</p>
@@ -97,7 +97,7 @@
                     <div class="experience-icon">
                         <i class="fas fa-fish fa-3x"></i>
                     </div>
-                    <h2>Nigiris Fusión</h2>
+                    <h2>Nigiris Fusió</h2>
                     <p>Hem dissenyat nigiris únics que complementen a la perfecció l'experiència gastronòmica que oferim. Gaudeix d'una explosió de sabors i aromes a cada mos dels nostres exquisits nigiris.</p>
                 </div>
             </div>
