--- a/index.html
+++ b/index.html
@@ -115,10 +115,13 @@
       <i class="fas fa-clock fa-3x"></i>
     </div>
     <h2>Horari</h2>
-    <p>Dimecres a Divendres: 1:15 - 4p.m.</p>
-    <p>                  8:30 - 11:30p.m.</p>
-    <p>Disabte: 10am - 11pm</p>
-    <p>Diumenge: Tancat</p>
+    <p>Dilluns y Dimarts: Tancat</p>
+    <p>
+    <p>Dimecres a Divendres: 13:15 - 16:00</p>
+    <p>                            20:30 - 23:00</p>
+    <p>Disabte y Diumenge: 13:15 - 16:30</p>
+    <p>20:30 - 23:30</p>
+  
   </div>
 </section>
 
