--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
     <h2>Horari</h2>
     <p>Dilluns y Dimarts: Tancat</p>
     <p>
-    <p>Dimecres a Divendres: 13:15 - 16:00</p>
-    <p>                            20:30 - 23:00</p>
-    <p>Disabte y Diumenge: 13:15 - 16:30</p>
+    <p>Dimecres a Divendres:</p>
+    <p> 13:15 - 16:00</p>
+    <p>20:30 - 23:00</p>
+    <p>Disabte y Diumenge:</p>
+    <p> 13:15 - 16:30</p>
     <p>20:30 - 23:30</p>
   
   </div>
