--- a/index.html
+++ b/index.html
@@ -82,25 +82,30 @@
                 </div>
 
                 <!-- Tarjeta Gastronomía -->
+                 <a href="menu.html" class="experience-card-link">
                 <div class="experience-card">
-                   <a href="menu.html" style="text-decoration: none; color: inherit;">
-                    <div class="experience-icon">
-                        <i class="fas fa-utensils fa-3x"></i>
+                     <div class="experience-image">
+                        <img src="img/gastronomia.jpg" alt="Gastronomía en Mitori" class="ampliar-imagen">
                     </div>
                     <h2>Gastronomía</h2>
                     <p>El nostre menú està curosament elaborat amb ingredients frescos i d'alta qualitat per oferir-vos una experiència culinària única Japonesa.</p>
+               </div>
                 </a>
-                </div>
+                
 
                 <!-- Tarjeta Sashimi -->
                 <div class="experience-card">
-                    <div class="experience-icon">
-                        <i class="fas fa-fish fa-3x"></i>
-                    </div>
-                    <h2>Nigiris Fusió</h2>
-                    <p>Hem dissenyat nigiris únics que complementen a la perfecció l'experiència gastronòmica que oferim. Gaudeix d'una explosió de sabors i aromes a cada mos dels nostres exquisits nigiris.</p>
+                <div class="experience-video">
+                  <video width="100%" height="250" controls>
+                    <source src="img/video.mp4" type="video/mp4">
+                          Tu navegador no soporta la etiqueta de video.
+                </video>
+                 </div>
+                <h2>Nigiris Fusió</h2>
+                  <p>Hem dissenyat nigiris únics que complementen a la perfecció l'experiència gastronòmica que oferim. Gaudeix d'una explosió de sabors i aromes a cada mos dels nostres exquisits nigiris.</p>
                 </div>
-            </div>
+
+
         </section>
 
 <div id="imageModal" class="modal">
