--- a/menu.html
+++ b/menu.html
@@ -51,11 +51,11 @@
                 <h3>PLATS DESTACATS</h3>
                 <div class="menu-item">
                     <div class="menu-item-left">
-                        <h4>PANIPURI DE SALMÓ (1 ud.)</h4>
-                        <p class="description">Cruixent indi farcit amb tartar de salmó, tòfona i kimchi.</p>
+                        <h4>ANTICUCHERO (8 pces.)</h4>
+                        <p class="description">Farcit de llagostí arrebossat i alvocat, cobert de làmines de peix blanc, salsa anticuxera.</p>
                     </div>
-                    <img src="img/platos/image1.png" alt="Panipuri de salmó" class="menu-item-image">
-                    <span class="price">€3,50</span>
+                    <img src="img/platos/anticucho.jpg" alt="Panipuri de salmó" class="menu-item-image">
+                    <span class="price">€13.60</span>
                 </div>
               
         </section>
