--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="experience-card">
                 <div class="experience-video">
                   <video width="100%" height="250" controls>
-                    <source src="img/video.mp4" type="video/mp4">
+                    <source src="img/nigiri.mp4" type="video/mp4">
                           Tu navegador no soporta la etiqueta de video.
                 </video>
                  </div>
