--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,7 @@
                 <div class="menu-item">
                     <div class="menu-item-left">
                         <h4>ANTICUCHERO (8 pces.)</h4>
-                        <p class="description">Farcit de llagostí arrebossat i alvocat, cobert de làmines de peix blanc, salsa anticuxera.</p>
+                        <p class="description">Farcit de llagostí arrebossat i advocat, cobert de làmines de peix blanc, salsa anticuxera.</p>
                     </div>
                     <img src="img/platos/anticucho.jpg" alt="Panipuri de salmó" class="menu-item-image">
                     <span class="price">€13.60</span>
