--- a/menu.html
+++ b/menu.html
@@ -51,11 +51,11 @@
                 <h3>PLATS DESTACATS</h3>
                 <div class="menu-item">
                     <div class="menu-item-left">
-                        <h4>ANTICUCHERO (8 pces.)</h4>
-                        <p class="description">Farcit de llagostí arrebossat i advocat, cobert de làmines de peix blanc, salsa anticuxera.</p>
+                        <h4>TIRADITO (8 pces.)</h4>
+                        <p class="description">Làmines de peix blanc amb una salsa de llet de tigre, alfàbrega i parmesà.</p>
                     </div>
                     <img src="img/platos/anticucho.jpg" alt="Panipuri de salmó" class="menu-item-image">
-                    <span class="price">€13.60</span>
+                    <span class="price">€16.50</span>
                 </div>
               
         </section>
