--- a/menu.html
+++ b/menu.html
@@ -54,10 +54,29 @@
                         <h4>TIRADITO (8 pces.)</h4>
                         <p class="description">Làmines de peix blanc amb una salsa de llet de tigre, alfàbrega i parmesà.</p>
                     </div>
-                    <img src="img/platos/anticucho.jpg" alt="Panipuri de salmó" class="menu-item-image">
+                    <img src="img/platos/tiradito.jpg" alt="Tiradito" class="menu-item-image">
                     <span class="price">16.50 €</span>
                 </div>
               
+
+                <div class="menu-item">
+                    <div class="menu-item-left">
+                        <h4>URUMAKI DE SURIMI (8 pces.)</h4>
+                        <p class="description">Surimi amb advocat, maionesa trufada i llima.</p>
+                    </div>
+                    <img src="img/platos/sushi.jpg" alt="Urumaki de surimi" class="menu-item-image">
+                    <span class="price">12.90 €</span>
+                </div>
+
+                 <div class="menu-item">
+                    <div class="menu-item-left">
+                        <h4>URUMAKI DE SURIMI (8 pces.)</h4>
+                        <p class="description">Llagostí empanat, alvocat, làmines de salmó, emulsió trufada i salsa teriyaki.</p>
+                    </div>
+                    <img src="img/platos/mitori.jpg" alt="Sushi Mitori" class="menu-item-image">
+                    <span class="price">12.90 €</span>
+                </div>
+
         </section>
     
 
