--- a/menu.html
+++ b/menu.html
@@ -70,7 +70,7 @@
 
                  <div class="menu-item">
                     <div class="menu-item-left">
-                        <h4>URUMAKI DE SURIMI (8 pces.)</h4>
+                        <h4>MITORI (8 pces.)</h4>
                         <p class="description">Llagostí empanat, alvocat, làmines de salmó, emulsió trufada i salsa teriyaki.</p>
                     </div>
                     <img src="img/platos/mitori.jpg" alt="Sushi Mitori" class="menu-item-image">
