--- a/menu.html
+++ b/menu.html
@@ -71,7 +71,7 @@
                  <div class="menu-item">
                     <div class="menu-item-left">
                         <h4>MITORI (8 pces.)</h4>
-                        <p class="description">Llagostí empanat, alvocat, làmines de salmó, emulsió trufada i salsa teriyaki.</p>
+                        <p class="description">Llagostí empanat, advocat, làmines de salmó, emulsió trufada i salsa teriyaki.</p>
                     </div>
                     <img src="img/platos/mitori.jpg" alt="Sushi Mitori" class="menu-item-image">
                     <span class="price">12.90 €</span>
