--- a/reservaciones.html
+++ b/reservaciones.html
@@ -63,7 +63,7 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="date">Data:</label>
+                    <label for="date">Data: (30/5 Divendres no disponible)</label>
                     <input type="date" id="date" name="Fecha" required>
                 </div>
                 
