--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </main>
 
   <footer>
-        <p>Dirección: <a href="https://maps.app.goo.gl/ksyMBeZ2E3a1sNxE6" target="_blank" rel="noopener noreferrer">Passeig del Compositor Beethoven, 3, 25230 Mollerussa, Lleida</a></p>
+        <p>Direcció: <a href="https://maps.app.goo.gl/ksyMBeZ2E3a1sNxE6" target="_blank" rel="noopener noreferrer">Passeig del Compositor Beethoven, 3, 25230 Mollerussa, Lleida</a></p>
         
         <div class="social-icons">
           
