--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
       <i class="fas fa-clock fa-3x"></i>
     </div>
     <h2>Horari</h2>
-    <p>Dilluns y Dimarts: Tancat</p>
+    <p>Dilluns i Dimarts: Tancat</p>
     <p>
-    <p>Dimecres y Dijous:</p>
+    <p>Dimecres i Dijous:</p>
     <p> 13:15 - 16:00</p>
     <p>20:30 - 23:00</p>
     <p>Divendres a Diumenge:</p>
