--- a/menu.html
+++ b/menu.html
@@ -46,8 +46,8 @@
 
     <main>
           <section class="menu">
-            <!-- CARTA
-           <h2><a href="" target="_blank" style="text-decoration: none; color: inherit;">CARTA (Click)</a></h2>-->
+            <!-- CARTA-->
+           <h2><a href="CartaMenu.pdf" target="_blank" style="text-decoration: none; color: inherit;">CARTA (Click)</a></h2>
             <div class="menu-category">
                 <h3>PLATS DESTACATS</h3>
                 <div class="menu-item">
