--- a/menu.html
+++ b/menu.html
@@ -52,7 +52,7 @@
                 <h3>PLATS DESTACATS</h3>
                 <div class="menu-item">
                     <div class="menu-item-left">
-                        <h4>TIRADITO (8 pces.)</h4>
+                        <h4>TIRADITO </h4>
                         <p class="description">Làmines de peix blanc amb una salsa de llet de tigre, alfàbrega i parmesà.</p>
                     </div>
                     <img src="img/platos/tiradito.jpg" alt="Tiradito" class="menu-item-image">
