--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
         <nav>
             <ul class="nav-list">
-                <li><a href="index.html">Inici</a></li>
                 <li><a href="menu.html">Menú</a></li>
                 <li><a href="reservaciones.html">Reservacions</a></li>
+                <li><a href="https://wa.me/34623703282/" target="_blank" rel="noopener noreferrer">Take Away</a></li>
             </ul>
         </nav>
     </header>
@@ -67,6 +67,15 @@
             <p>Fundat en 2025, nostre restaurant ofreix una fusió de sabors tradicionals amb un toc modern.</p>
         </section>
 
+
+        <section class="take-section">
+          <a href="https://wa.me/34623703282" target="_blank" class="experience-card-link">
+           <div class="experience-card">
+          <h2>Take Away</h2>
+          <p> Realitza la teva comanda Take Away amb nosaltres, fes clic i escriu-nos per WhatsApp.</p>
+          </div>
+          </a>
+        </section>
 
           <section class="experience-section">
             <div class="experience-grid">
