--- a/reservaciones.html
+++ b/reservaciones.html
@@ -37,7 +37,7 @@
             <ul class="nav-list">
                 <li><a href="index.html">Inici</a></li>
                 <li><a href="menu.html">Menú</a></li>
-                <li><a href="reservaciones.html">Reservacions</a></li>
+                <li><a href="https://wa.me/34623703282/" target="_blank" rel="noopener noreferrer">Take Away</a></li>
             </ul>
         </nav>
     </header>
