--- a/index.html
+++ b/index.html
@@ -130,13 +130,14 @@
     </div>
     <h2>Horari</h2>
     <p>Dilluns i Dimarts: Tancat</p>
-    <p>
-    <p>Dimecres i Dijous:</p>
-    <p> 13:15 - 16:00</p>
-    <p>20:30 - 23:00</p>
-    <p>Divendres a Diumenge:</p>
-    <p> 13:15 - 16:30</p>
-    <p>20:30 - 23:30</p>
+   
+    <p>Dimecres i Dijous: <br>
+        13:30 - 16:00 <br>
+        20:30 - 23:00 <br>
+        </p>
+    <p>Divendres a Diumenge: <br>
+        13:30 - 16:30 <br>
+        20:30 - 23:30</p>
   
   </div>
 </section>
