--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <section class="take-section">
           <a href="https://wa.me/34623703282" target="_blank" class="experience-card-link">
-           <div class="experience-card">
+           <div class="take-card">
           <h2>Take Away</h2>
           <p> Realitza la teva comanda Take Away amb nosaltres, fes clic i escriu-nos per WhatsApp.</p>
           </div>
