--- a/reservaciones.html
+++ b/reservaciones.html
@@ -49,7 +49,7 @@
 
                 <div class="form-group">
                     <label for="name">Nom complet:</label>
-                    <input type="text" id="name" name="Nombre" required>
+                    <input type="text" id="name" name="Nombre" required placeholder="Introdueix el teu nom complet">
                 </div>
                 
                 <div class="form-group">
