--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mitori</title>
+    <title>Mitori - Carta</title>
     
     <!-- Estilos y fuentes -->
     <link rel="stylesheet" href="css/styles.css">
@@ -38,8 +38,8 @@
         <nav>
            <ul class="nav-list">
                 <li><a href="index.html">Inici</a></li>
-                 <li><a href="https://wa.me/34623703282/" target="_blank" rel="noopener noreferrer">Take Away</a></li>
                 <li><a href="reservaciones.html">Reservacions</a></li>
+                 <li><a href="https://wa.me/34623703282/" target="_blank" rel="noopener noreferrer">Take Away</a></li>
             </ul>
         </nav>
     </header>
@@ -52,8 +52,8 @@
                 <h3>PLATS DESTACATS</h3>
                 <div class="menu-item">
                     <div class="menu-item-left">
-                        <h4>TIRADITO </h4>
-                        <p class="description">Làmines de peix blanc amb una salsa de llet de tigre, alfàbrega i parmesà.</p>
+                        <h4>TIRADET </h4>
+                        <p class="description">Làmines de peix blanc amb una salsa de llet de tigre, alfàbrega i parmesà amb daus de moniato.</p>
                     </div>
                     <img src="img/platos/tiradito.jpg" alt="Tiradito" class="menu-item-image">
                     <span class="price">16.80 €</span>
