--- a/reservaciones.html
+++ b/reservaciones.html
@@ -84,7 +84,7 @@
                         <h3 class="toggle-title"><i
                                 class="fas fa-door-closed"></i> Dies
                             tancats</h3>
-                        <div class="toggle-content">
+                        <div class="toggle-content open">
                             <p>Dilluns i dimarts</p>
                         </div>
                     </div>
