--- a/reservaciones.html
+++ b/reservaciones.html
@@ -149,7 +149,7 @@
 
                     <!-- Comentaris -->
                     <div class="form-group">
-                        <label for="comments">Comentaris adicionals:</label>
+                        <label for="comments">Comentaris addicionals:</label>
                         <textarea id="comments" name="comments" rows="4"
                             placeholder="Al·lèrgies, preferències, etc."></textarea>
                     </div>
