--- a/reservaciones.html
+++ b/reservaciones.html
@@ -153,8 +153,8 @@
                         </div>
 
                         <!-- Missatges del sistema -->
-                        <div id="reservation-message"
-                            class="reservation-message"></div>
+                        <div id="toast" class="toast">Reserva enviada
+                            correctament!</div>
 
                         <!-- Botó -->
                         <button type="submit" class="btn">Reservar</button>
