--- a/reservaciones.html
+++ b/reservaciones.html
@@ -73,7 +73,7 @@
                                     places</span>
                             </div>
                             <div class="shift">
-                                <span class="shift-name">Nit</span>
+                                <span class="shift-name">Nit 🌙</span>
                                 <span class="shift-hours">20:30 - 22:30</span>
                                 <span class="shift-capacity"><span
                                         id="night-count">23</span>/23
