--- a/menu.html
+++ b/menu.html
@@ -36,12 +36,12 @@
 
 
         <nav>
-           <ul class="nav-list">
-                <li><a href="index.html">Inici</a></li>
-                <li><a href="reservaciones.html">Reservacions</a></li>
-                 <li><a href="https://wa.me/34623703282/" target="_blank" rel="noopener noreferrer">Take Away</a></li>
-            </ul>
-        </nav>
+        <ul class="nav-list">
+          <li><a href="index.html">Menú</a></li>
+          <li><a href="reservaciones.html">Reservacions</a></li>
+          <li><a href="takeaway.html">Take Away</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
