--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         <ul class="nav-list">
           <li><a href="menu.html">Menú</a></li>
           <li><a href="reservaciones.html">Reservacions</a></li>
-          <li><a href="https://wa.me/34623703282/" target="_blank"
-              rel="noopener noreferrer">Take Away</a></li>
+          <li><a href="takeaway.html">Take Away</a></li>
         </ul>
       </nav>
     </header>
@@ -70,12 +69,11 @@
       </section>
 
       <section class="take-section">
-        <a href="https://wa.me/34623703282" target="_blank"
+        <a href="takeaway.html"
           class="experience-card-link">
           <div class="take-card">
             <h2>Take Away</h2>
-            <p> Realitza la teva comanda Take Away amb nosaltres, fes clic i
-              escriu-nos per WhatsApp.</p>
+            <p> Realitza la teva comanda Take Away amb nosaltres.</p>
           </div>
         </a>
       </section>
