--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
 
         <nav>
         <ul class="nav-list">
-          <li><a href="index.html">Menú</a></li>
+          <li><a href="index.html">Inici</a></li>
           <li><a href="reservaciones.html">Reservacions</a></li>
           <li><a href="takeaway.html">Take Away</a></li>
         </ul>
