--- a/reservaciones.html
+++ b/reservaciones.html
@@ -48,7 +48,7 @@
         <ul class="nav-list">
           <li><a href="index.html">Inici</a></li>
           <li><a href="menu.html">Menú</a></li>
-          <li><a href="reservaciones.html">Reservacions</a></li>
+          <li><a href="takeaway.html">Take Away</a></li>
         </ul>
       </nav>
         </header>
