--- a/takeaway.html
+++ b/takeaway.html
@@ -873,7 +873,7 @@
                   <div class="item-info">
                     <div class="item-name">Edamame trufat</div>
                     <div class="item-description">Vaines de soja verdes amb toc
-                      de tòfona</div>
+                      de tòfona.</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">5,90 €</div>
@@ -896,7 +896,7 @@
                   <div class="item-info">
                     <div class="item-name">Yakisoba de presa</div>
                     <div class="item-description">Amb barreja de verdures i daus
-                      de presa</div>
+                      de presa.</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">11,90 €</div>
