--- a/takeaway.html
+++ b/takeaway.html
@@ -1089,7 +1089,7 @@
 
                 <div class="menu-item">
                   <div class="item-info">
-                    <div class="item-name">Variat de sashimi y Nigiris (16 peces)</div>
+                    <div class="item-name">Variat de sashimi y nigiris (16 peces)</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">29,90 €</div>
