--- a/takeaway.html
+++ b/takeaway.html
@@ -1093,7 +1093,7 @@
                   </div>
                   <div class="item-actions">
                     <div class="item-price">29,90 €</div>
-                    <button class="add-to-cart" data-name="Variat de sashimi y Nigiris"
+                    <button class="add-to-cart" data-name="Variat de sashimi y nigiris"
                       data-price="29.90">
                       <i class="fas fa-plus"></i>
                     </button>
