--- a/takeaway.html
+++ b/takeaway.html
@@ -1394,7 +1394,7 @@
                   <div class="item-actions">
                     <div class="item-price">13,90 €</div>
                     <button class="add-to-cart"
-                      data-name="Uramaki de fetge micuit" data-price="13.90">
+                      data-name="Uramaki de foie micuit" data-price="13.90">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
