--- a/takeaway.html
+++ b/takeaway.html
@@ -858,7 +858,7 @@
                   <div class="item-info">
                     <div class="item-name">Edamame picant</div>
                     <div class="item-description">Vaines de soja verds amb
-                      salsa picant</div>
+                      salsa picant.</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">5,90 €</div>
@@ -1252,7 +1252,7 @@
                           peces)</div>
                         <div class="item-description">Peix blanc fresc sobre
                           arròs
-                          per a sushi</div>
+                          per a sushi.</div>
                       </div>
                       <div class="item-actions">
                         <div class="item-price">6,50 €</div>
@@ -1267,7 +1267,7 @@
                       <div class="item-info">
                         <div class="item-name">Nigiri de tonyina (2 peces)</div>
                         <div class="item-description">Tonyina fresca sobre arròs
-                          per a sushi .</div>
+                          per a sushi.</div>
                       </div>
                       <div class="item-actions">
                         <div class="item-price">6,90 €</div>
@@ -1282,7 +1282,7 @@
                       <div class="item-info">
                         <div class="item-name">Nigiri de salmó (2 peces)</div>
                         <div class="item-description">Salmó fresc sobre arròs
-                          per a sushi .</div>
+                          per a sushi.</div>
 
                       </div>
                       <div class="item-actions">
