--- a/takeaway.html
+++ b/takeaway.html
@@ -972,7 +972,7 @@
                   <div class="item-actions">
                     <div class="item-price">11,90 €</div>
                     <button class="add-to-cart"
-                      data-name="Yakimeshi de pollastre cruixent"
+                      data-name="Yakimeshi de pollastre"
                       data-price="11.90">
                       <i class="fas fa-plus"></i>
                     </button>
@@ -1227,7 +1227,7 @@
 
                 <div class="menu-item">
                   <div class="item-info">
-                    <div class="item-name">Variat de nigiris y sashimi (6 peces)</div>
+                    <div class="item-name">Variat de nigiris y sashimi (16 peces)</div>
                     <div class="item-description">Una barreja de diversos
                       nigiris y sashimi de la carta.</div>
                   </div>
