--- a/menu.html
+++ b/menu.html
@@ -56,13 +56,13 @@
                         <p class="description">Làmines de peix blanc amb una salsa de llet de tigre, alfàbrega i parmesà amb daus de moniato.</p>
                     </div>
                     <img src="img/platos/tiradito.jpg" alt="Tiradito" class="menu-item-image">
-                    <span class="price">16.80 €</span>
+                    <span class="price">17.90 €</span>
                 </div>
               
 
                 <div class="menu-item">
                     <div class="menu-item-left">
-                        <h4>URUMAKI DE SURIMI (8 pces.)</h4>
+                        <h4>ACEVICHADO (8 pces.)</h4>
                         <p class="description">Surimi amb advocat, maionesa trufada i llima.</p>
                     </div>
                     <img src="img/platos/sushi.jpg" alt="Urumaki de surimi" class="menu-item-image">
