--- a/menu.html
+++ b/menu.html
@@ -63,7 +63,7 @@
                 <div class="menu-item">
                     <div class="menu-item-left">
                         <h4>ACEVICHADO (8 pces.)</h4>
-                        <p class="description">Surimi amb advocat, maionesa trufada i llima.</p>
+                        <p class="description">Farcit de tàrtar de salmó i alvocat, cobert de làmines de tonyina amb salsa cevichera i moniato fregit.</p>
                     </div>
                     <img src="img/platos/sushi.jpg" alt="Urumaki de surimi" class="menu-item-image">
                     <span class="price">13.90 €</span>
