--- a/takeaway.html
+++ b/takeaway.html
@@ -801,9 +801,9 @@
                     </div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">7,40 €</div>
+                    <div class="item-price">7,20 €</div>
                     <button class="add-to-cart" data-name="Gyozes d'ànec"
-                      data-price="7.40">
+                      data-price="7.20">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -861,9 +861,9 @@
                       salsa picant.</div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">5,90 €</div>
+                    <div class="item-price">5,40 €</div>
                     <button class="add-to-cart" data-name="Edamame picant"
-                      data-price="5.90">
+                      data-price="5.40">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -876,9 +876,9 @@
                       de tòfona.</div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">5,90 €</div>
+                    <div class="item-price">5,50 €</div>
                     <button class="add-to-cart" data-name="Edamame trufat"
-                      data-price="5.90">
+                      data-price="5.50">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -925,7 +925,7 @@
 
                 <div class="menu-item">
                   <div class="item-info">
-                    <div class="item-name">Yakisoba de llagosta</div>
+                    <div class="item-name">Yakisoba de llagostí</div>
                     <div class="item-description">Cues de llagostí amb barreja
                       de verdures i bolets.</div>
                   </div>
@@ -1017,10 +1017,10 @@
                       bolets.</div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">10,50 €</div>
+                    <div class="item-price">10,10 €</div>
                     <button class="add-to-cart"
                       data-name="Yakimeshi de verdures"
-                      data-price="10.50">
+                      data-price="10.10">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -1039,10 +1039,10 @@
                     <div class="item-name">Peix blanc (6 peces)</div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">11,50 €</div>
+                    <div class="item-price">11,20 €</div>
                     <button class="add-to-cart"
                       data-name="Sashimi de peix blanc"
-                      data-price="11.50">
+                      data-price="11.20">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -1053,9 +1053,9 @@
                     <div class="item-name">Tonyina (6 peces)</div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">12,40 €</div>
+                    <div class="item-price">12,20 €</div>
                     <button class="add-to-cart" data-name="Sashimi de tonyina"
-                      data-price="12.40">
+                      data-price="12.20">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -1066,9 +1066,9 @@
                     <div class="item-name">Salmó (6 peces)</div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">11,40 €</div>
+                    <div class="item-price">11,20 €</div>
                     <button class="add-to-cart" data-name="Sashimi de salmó"
-                      data-price="11.40">
+                      data-price="11.20">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -1079,9 +1079,9 @@
                     <div class="item-name">Variat de sashimi (9 peces)</div>
                   </div>
                   <div class="item-actions">
-                    <div class="item-price">16,20 €</div>
+                    <div class="item-price">16,00 €</div>
                     <button class="add-to-cart" data-name="Variat de sashimi "
-                      data-price="16.20">
+                      data-price="16.00">
                       <i class="fas fa-plus"></i>
                     </button>
                   </div>
@@ -1089,7 +1089,7 @@
 
                 <div class="menu-item">
                   <div class="item-info">
-                    <div class="item-name">Variat de sashimi y nigiris (16 peces)</div>
+                    <div class="item-name">Variats de  (16 peces)</div>
                   </div>
                   <div class="item-actions">
                     <div class="item-price">29,90 €</div>
@@ -1113,9 +1113,9 @@
                           salsa cevichada.</div>
                       </div>
                       <div class="item-actions">
-                        <div class="item-price">11,60 €</div>
+                        <div class="item-price">11,50 €</div>
                         <button class="add-to-cart" data-name="Bao de crancs"
-                          data-price="11.60">
+                          data-price="11.50">
                           <i class="fas fa-plus"></i>
                         </button>
                       </div>
@@ -1129,9 +1129,9 @@
                           ceba confitada i maionesa japonesa.</div>
                       </div>
                       <div class="item-actions">
-                        <div class="item-price">10,20 €</div>
+                        <div class="item-price">10,00 €</div>
                         <button class="add-to-cart" data-name="Bao de pollastre"
-                          data-price="10.20">
+                          data-price="10.00">
                           <i class="fas fa-plus"></i>
                         </button>
                       </div>
